fixing the animation on the bar, also alignment fo rlist

--- a/app/assets/stylesheets/apt/apt.scss
+++ b/app/assets/stylesheets/apt/apt.scss
@@ -389,9 +389,9 @@ select[disabled] {
 }
 .large-logo {
   img {
-    margin-top: 30px;
-    width: 150px;
-    height: 150px;
+    margin-top: 15px;
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
     display: block;
     margin-left: auto;
@@ -419,7 +419,7 @@ select {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-top: 25px;
+  margin-top: 15px;
   border-top: 1px solid $light-blue;
   li {
     float: left;
